--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ anyhow = "1.0.75"
 clap = { version = "4.4.7", features = ["derive", "env"] }
 dirs = "5.0.1"
 dotenv = { version = "0.15.0", features = ["clap"] }
+env_logger = "0.10.0"
+log = "0.4.20"
 reqwest = { version = "0.11.22", features = ["json", "blocking"] }
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
