--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1.0.75"
+chrono = "0.4.31"
 clap = { version = "4.4.7", features = ["derive", "env"] }
 dirs = "5.0.1"
 dotenv = { version = "0.15.0", features = ["clap"] }
